Add support for DataIntegrityProof (#515)
Including p384 and JCS

Also:
- add support for credentials context v2
- bump versions in preparation for a release
- add proofPurpose check for Ed25519Signature2020

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,8 @@ jobs:
         components: rustfmt, clippy
 
     - uses: Swatinem/rust-cache@v2
+      with:
+        cache-on-failure: "true"
 
     - name: Fmt
       run: cargo fmt -- --check
@@ -66,13 +68,15 @@ jobs:
     - name: Install Rust
       uses: actions-rs/toolchain@v1
       with:
-        toolchain: "1.66.0"
+        toolchain: "1.68.0"
         profile: minimal
         override: true
 
     - uses: taiki-e/install-action@cargo-hack
 
     - uses: Swatinem/rust-cache@v2
+      with:
+        cache-on-failure: "true"
 
     - name: Test each feature
       run: cargo hack test --each-feature --workspace --exclude ssi --exclude 'ssi-did-test' --exclude 'ssi-vc-test'  -- --test-threads=4
