--- a/ssi-dids/Cargo.toml
+++ b/ssi-dids/Cargo.toml
@@ -49,7 +49,7 @@ hyper = { version = "0.14", features = [
     "http1",
     "stream",
 ] }
-ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false, features = ["secp256k1"] }
+ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false, features = ["secp256k1", "ed25519"] }
 
 [package.metadata.docs.rs]
 all-features = true
