ssi-sd-jwt implementation (#529)
* Initial commit of ssi-sd-jwt

* Expose construction API

* Remove all todosgr todo ssi-sd-jwt/

* Re export ssi-sd-jwt in core ssi

* Rename decode public functions to make 'easy mode' clearer

* Split Error into DecodeError and EncodeError

* Add docs

* Add doc justifying unwrap()

* Missed fmt

* Spelling and grammar

* Remove ValidityClaims concept, concept removed from draft

* Remove unwrap by combining extract and remove

* Clean up types for disclosure processing

* Combine validation and extraction

* Change uses of jose-b64 to base64

* Refactor validation to cleaner match statement

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,6 +65,7 @@ ssi-ucan = { path = "./ssi-ucan", version = "0.1" }
 ssi-vc = { path = "./ssi-vc", version = "0.2.0" }
 ssi-zcap-ld = { path = "./ssi-zcap-ld", version = "0.1.2" }
 ssi-caips = { path = "./ssi-caips", version = "0.1", default-features = false }
+ssi-sd-jwt = { path = "./ssi-sd-jwt", version = "0.1" }
 
 [workspace]
 members = [
@@ -88,6 +89,7 @@ members = [
   "ssi-dids",
   "ssi-jws",
   "ssi-jwt",
+  "ssi-sd-jwt",
   "ssi-tzkey",
   "ssi-ssh",
   "ssi-ldp",
