Token Status List & Bitstring Status List v1.0 (#551)
* Add `ssi-status` library implementing IETF and W3C bitvec status lists.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,6 +73,7 @@ sha3 = "0.10.8"
 rsa = "0.6"
 
 # other common dependencies
+log = "0.4.21"
 async-std = "1.9"
 async-trait = "0.1.68"
 thiserror = "1.0.40"
@@ -80,7 +81,7 @@ chrono = "0.4.24"
 iref = "3.1.2"
 static-iref = "3.0"
 rdf-types = "0.22.3"
-xsd-types = "0.9.2"
+xsd-types = "0.9.4"
 locspan = "0.8"
 json-syntax = "0.12.2"
 nquads-syntax = "0.19"
