--- a/crates/jwk/Cargo.toml
+++ b/crates/jwk/Cargo.toml
@@ -43,6 +43,7 @@ tezos = ["blake2b_simd", "secp256k1", "secp256r1", "bs58"]
 ring = ["dep:ring"]
 
 [dependencies]
+ssi-claims-core.workspace = true
 num-bigint = "0.4"
 simple_asn1 = "^0.5.2"
 zeroize = { version = "1.5", features = ["zeroize_derive"] }
