`ecdsa-rdfc-2019` cryptosuite. (#555)
* Add `ecdsa-rdfc-2019` implementation.
* Update `credentials/v2` context.
* Fix tests.
* Remove debug print.
* Add e2e tests for ecdsa
* Fix `Multikey` to accept any algorithm, not just `EdDSA`.
* Fix features.
Co-authored-by: Simon Bihel <simon.bihel@spruceid.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -143,11 +143,15 @@ secp256k1 = ["ssi-claims/secp256k1", "ssi-dids/secp256k1"]
 ## Signature suites based on secp256r1.
 ##
 ## This includes:
-##   - `EcdsaSecp256r1Signature2019` (requires `secp256r1`)
+##   - `EcdsaSecp256r1Signature2019` (requires `w3c`)
+##   - `EcdsaRdfc2019` (requires `w3c`)
 secp256r1 = ["ssi-claims/secp256r1", "ssi-dids/secp256r1"]
 
-## Enable secp384r1 keys.
-secp384r1 = ["ssi-jwk/secp384r1", "ssi-verification-methods/secp384r1", "ssi-dids/secp384r1"]
+## Enable secp384r1 keys and signature suites based on secp384r1.
+##
+## This includes:
+##   - `EcdsaRdfc2019` (requires `w3c`)
+secp384r1 = ["ssi-claims/secp384r1", "ssi-dids/secp384r1"]
 
 ## Signature suites based on RSA.
 ##
