--- a/crates/claims/Cargo.toml
+++ b/crates/claims/Cargo.toml
@@ -27,7 +27,12 @@ secp256k1 = ["ssi-jws/secp256k1", "ssi-data-integrity/secp256k1", "ssi-verificat
 
 # Enables signature suites based on secp256r1:
 # - `EcdsaSecp256r1Signature2019`
+# - `EcdsaRdfc2019`
 secp256r1 = ["ssi-jws/secp256r1", "ssi-data-integrity/secp256r1", "ssi-verification-methods/secp256r1"]
+
+# Enables signature suites based on secp384r1:
+# - `EcdsaRdfc2019`
+secp384r1 = ["ssi-jws/secp384r1", "ssi-data-integrity/secp384r1", "ssi-verification-methods/secp384r1"]
 
 # Enables `RsaSignature2018`
 rsa = ["ssi-jws/rsa", "ssi-data-integrity/rsa", "ssi-verification-methods/rsa"]
