--- a/crates/claims/crates/data-integrity/Cargo.toml
+++ b/crates/claims/crates/data-integrity/Cargo.toml
@@ -48,8 +48,15 @@ secp256k1 = ["ssi-data-integrity-suites/secp256k1"]
 ## Signature suites based on secp256r1.
 ##
 ## This includes:
-##   - `EcdsaSecp256r1Signature2019` (requires `secp256r1`)
+##   - `EcdsaSecp256r1Signature2019` (requires `w3c`)
+##   - `EcdsaRdfc2019` (requires `w3c`)
 secp256r1 = ["ssi-data-integrity-suites/secp256r1"]
+
+## Signature suites based on secp384r1.
+##
+## This includes:
+##   - `EcdsaRdfc2019` (requires `w3c`)
+secp384r1 = ["ssi-data-integrity-suites/secp384r1"]
 
 ## Signature suites based on RSA.
 ##
