--- a/crates/claims/crates/data-integrity/suites/Cargo.toml
+++ b/crates/claims/crates/data-integrity/suites/Cargo.toml
@@ -48,13 +48,13 @@ secp256k1 = ["ssi-verification-methods/secp256k1", "k256"]
 ## This includes:
 ##   - `EcdsaSecp256r1Signature2019` (requires `w3c`)
 ##   - `EcdsaRdfc2019` (requires `w3c`)
-secp256r1 = ["ssi-verification-methods/secp256r1", "p256"]
+secp256r1 = ["ssi-data-integrity-core/secp256r1", "ssi-verification-methods/secp256r1", "p256"]
 
 ## Signature suites based on secp384r1.
 ##
 ## This includes:
 ##   - `EcdsaRdfc2019` (requires `w3c`)
-secp384r1 = ["ssi-verification-methods/secp384r1", "p384"]
+secp384r1 = ["ssi-data-integrity-core/secp384r1", "ssi-verification-methods/secp384r1", "p384"]
 
 ## Signature suites based on RSA.
 ##
@@ -147,10 +147,11 @@ json-syntax = { workspace = true, features = ["canonicalize"] }
 serde_json = { workspace = true, optional = true }
 serde_jcs = { workspace = true, optional = true }
 
-# BBS
+# Selective disclosure.
 ssi-di-sd-primitives.workspace = true
+
+# BBS
 ssi-bbs.workspace = true
-hmac = "0.12.1"
 serde_cbor = "0.11.2"
 # rand_chacha.workspace = true
 
@@ -158,7 +159,6 @@ serde_cbor = "0.11.2"
 async-std = { version = "1.9", features = ["attributes"] }
 serde_json = { workspace = true, features = ["arbitrary_precision"] }
 static-iref.workspace = true
-rand = "0.7"
 hashbrown = "0.13.0"
 iref = { workspace = true, features = ["hashbrown"] }
 ssi-vc.workspace = true
