Add cargo-rdme to CI (#592)
Looks like part of the README was generated using cargo-rdme and it got out of sync, so I added a check to the CI.

Close #591

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,9 @@ jobs:
     - uses: Swatinem/rust-cache@v2
       with:
         cache-on-failure: "true"
+    - uses: taiki-e/install-action@v2
+      with:
+        tool: cargo-rdme
 
     - name: Fmt
       run: cargo fmt -- --check
@@ -56,6 +59,8 @@ jobs:
 
     - name: Doc
       run: cargo doc --no-deps --workspace --all-features
+    - name: cargo-rdme
+      run: cargo rdme --check --no-fail-on-warnings
 
   test-each-feature:
     if: ${{ !github.event.pull_request.draft }}
