--- a/crates/claims/Cargo.toml
+++ b/crates/claims/Cargo.toml
@@ -19,20 +19,20 @@ dif = ["ssi-data-integrity/dif"]
 # - `Ed25519Signature2018`
 # - `Ed25519Signature2020`
 # - `EdDsa2022`
-ed25519 = ["ssi-jws/ed25519", "ssi-data-integrity/ed25519", "ssi-verification-methods/ed25519"]
+ed25519 = ["ssi-jws/ed25519", "ssi-cose/ed25519", "ssi-data-integrity/ed25519", "ssi-verification-methods/ed25519"]
 
 # Enables signature suites based on secp256k1:
 # - `EcdsaSecp256k1Signature2019`
-secp256k1 = ["ssi-jws/secp256k1", "ssi-data-integrity/secp256k1", "ssi-verification-methods/secp256k1"]
+secp256k1 = ["ssi-jws/secp256k1", "ssi-cose/secp256k1", "ssi-data-integrity/secp256k1", "ssi-verification-methods/secp256k1"]
 
 # Enables signature suites based on secp256r1:
 # - `EcdsaSecp256r1Signature2019`
 # - `EcdsaRdfc2019`
-secp256r1 = ["ssi-jws/secp256r1", "ssi-data-integrity/secp256r1", "ssi-verification-methods/secp256r1"]
+secp256r1 = ["ssi-jws/secp256r1", "ssi-cose/secp256r1", "ssi-data-integrity/secp256r1", "ssi-verification-methods/secp256r1"]
 
 # Enables signature suites based on secp384r1:
 # - `EcdsaRdfc2019`
-secp384r1 = ["ssi-jws/secp384r1", "ssi-data-integrity/secp384r1", "ssi-verification-methods/secp384r1"]
+secp384r1 = ["ssi-jws/secp384r1", "ssi-cose/secp384r1", "ssi-data-integrity/secp384r1", "ssi-verification-methods/secp384r1"]
 
 # Enables `RsaSignature2018`
 rsa = ["ssi-jws/rsa", "ssi-data-integrity/rsa", "ssi-verification-methods/rsa"]
@@ -68,6 +68,7 @@ ssi-claims-core.workspace = true
 ssi-jws.workspace = true
 ssi-jwt.workspace = true
 ssi-sd-jwt.workspace = true
+ssi-cose.workspace = true
 ssi-vc.workspace = true
 ssi-vc-jose-cose.workspace = true
 ssi-data-integrity.workspace = true
