--- a/crates/claims/crates/vc-jose-cose/Cargo.toml
+++ b/crates/claims/crates/vc-jose-cose/Cargo.toml
@@ -11,14 +11,19 @@ documentation = "https://docs.rs/vc-jose-cose/"
 [dependencies]
 ssi-claims-core.workspace = true
 ssi-jws.workspace = true
+ssi-cose.workspace = true
 ssi-vc.workspace = true
 ssi-json-ld.workspace = true
 xsd-types.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+ciborium.workspace = true
 thiserror.workspace = true
+base64.workspace = true
 
 [dev-dependencies]
 ssi-jws = { workspace = true, features = ["secp256r1"] }
 ssi-jwk.workspace = true
+ssi-cose = { workspace = true, features = ["secp256r1"] }
 async-std.workspace = true
+hex.workspace = true
