--- a/crates/crypto/Cargo.toml
+++ b/crates/crypto/Cargo.toml
@@ -9,13 +9,15 @@ repository = "https://github.com/spruceid/ssi/"
 documentation = "https://docs.rs/ssi-crypto/"
 
 [features]
-default = ["secp256k1", "ripemd-160"]
+default = ["secp256k1", "secp256r1", "ripemd-160"]
+ed25519 = ["ed25519-dalek"]
 secp256k1 = ["k256", "getrandom", "keccak"]
+secp256r1 = ["p256"]
+secp384r1 = ["p384"]
 bbs = ["dep:bbs", "pairing-plus", "rand_old", "getrandom", "sha2_old", "hkdf"]
 ripemd-160 = ["ripemd160", "secp256k1"]
 keccak = ["keccak-hash"]
 ring = ["dep:ring"]
-
 
 [dependencies]
 thiserror.workspace = true
@@ -23,12 +25,14 @@ sha2 = { workspace = true }
 ring = { version = "0.16", optional = true }
 k256 = { workspace = true, optional = true, features = ["ecdsa"] }
 p256 = { workspace = true, optional = true, features = ["ecdsa"] }
+p384 = { workspace = true, optional = true, features = ["ecdsa"] }
 hkdf = { version = "0.8", optional = true }
+rand.workspace = true
 rand_old = { package = "rand", version = "0.7", optional = true }
 getrandom = { workspace = true, optional = true } # Required for wasm targets.
 sha2_old = { package = "sha2", version = "0.8", optional = true }
 keccak-hash = { version = "0.7", optional = true }
-ed25519-dalek = { workspace = true, optional = true }
+ed25519-dalek = { workspace = true, optional = true, features = ["rand_core"] }
 ripemd160 = { version = "0.9", optional = true }
 bbs = { version = "=0.4.1", optional = true }
 pairing-plus = { version = "=0.19.0", optional = true }
