--- a/crates/claims/crates/sd-jwt/Cargo.toml
+++ b/crates/claims/crates/sd-jwt/Cargo.toml
@@ -14,11 +14,15 @@ rand.workspace = true
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
 sha2.workspace = true
+ssi-core.workspace = true
+ssi-claims-core.workspace = true
 ssi-jwk.workspace = true
 ssi-jws.workspace = true
 ssi-jwt.workspace = true
 thiserror.workspace = true
+indexmap.workspace = true
 
 [dev-dependencies]
 hex-literal = "0.4.1"
 ssi-jws = { workspace = true, features = ["secp256r1"] }
+async-std.workspace = true
