--- a/crates/bbs/Cargo.toml
+++ b/crates/bbs/Cargo.toml
@@ -11,5 +11,5 @@ documentation = "https://docs.rs/ssi-bbs/"
 [dependencies]
 ssi-crypto.workspace = true
 ssi-claims-core.workspace = true
-zkryptium = "0.2.2"
+zkryptium = "=0.2.2"
 rand.workspace = true
