Tighten JsonPointer and methods (#613)

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -13,3 +13,6 @@ thiserror.workspace = true
 async-trait.workspace = true
 serde = { workspace = true, features = ["derive"] }
 pin-project.workspace = true
+
+[dev-dependencies]
+serde_json.workspace = true
