Add crate-level documentation for `ssi-dids` (#607)

--- a/crates/dids/Cargo.toml
+++ b/crates/dids/Cargo.toml
@@ -34,3 +34,6 @@ did-pkh.workspace = true
 did-tz.workspace = true
 did-web.workspace = true
 thiserror.workspace = true
+
+[dev-dependencies]
+async-std = { workspace = true, features = ["attributes"] }
