--- a/crates/contexts/Cargo.toml
+++ b/crates/contexts/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "ssi-contexts"
-version = "0.1.6"
+version = "0.1.7"
 authors = ["Spruce Systems, Inc."]
 edition = "2021"
-license = "Apache-2.0 AND W3C-20150513 AND CC-BY-SA-3.0 AND BSD-3-Clause"
+license = "Apache-2.0"
 description = "JSON-LD context files related to Verifiable Credentials, Decentralized Identifiers, and Linked Data Proofs"
 repository = "https://github.com/spruceid/ssi/"
 homepage = "https://github.com/spruceid/ssi/tree/main/contexts/"
