--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,7 +78,7 @@ jobs:
         submodules: true
 
     - name: Install Rust
-      uses: dtolnay/rust-toolchain@stable
+      uses: dtolnay/rust-toolchain@1.81.0
 
     - uses: taiki-e/install-action@cargo-hack
     - uses: Swatinem/rust-cache@v2
