add use_rustls_tls option to reqwest client builder (#666)
* add use_rustls_tls option to reqwest client builder

Signed-off-by: Ryan Tate <ryan.tate@spruceid.com>

* Update crates/dids/methods/web/Cargo.toml

---------

Signed-off-by: Ryan Tate <ryan.tate@spruceid.com>

--- a/crates/dids/methods/web/Cargo.toml
+++ b/crates/dids/methods/web/Cargo.toml
@@ -14,7 +14,9 @@ documentation = "https://docs.rs/did-web/"
 [dependencies]
 ssi-dids-core.workspace = true
 thiserror.workspace = true
-reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
+reqwest = { version = "0.11", default-features = false, features = [
+    "rustls-tls",
+] }
 http = "0.2"
 
 [target.'cfg(target_os = "android")'.dependencies.reqwest]
