--- a/crates/crypto/Cargo.toml
+++ b/crates/crypto/Cargo.toml
@@ -9,60 +9,42 @@ repository = "https://github.com/spruceid/ssi/"
 documentation = "https://docs.rs/ssi-crypto/"
 
 [features]
-default = ["rsa", "secp256k1", "secp256r1"]
-
-# Key types and signature functions.
-rsa = ["dep:rsa"]
-ed25519 = ["ed25519-dalek", "blake2"]
+default = ["secp256k1", "secp256r1", "ripemd-160"]
+ed25519 = ["ed25519-dalek"]
 secp256k1 = ["k256", "getrandom", "keccak"]
 secp256r1 = ["p256"]
 secp384r1 = ["p384"]
 bbs = ["dep:bbs", "pairing-plus", "rand_old", "getrandom", "sha2_old", "hkdf"]
-
-# Hash functions.
-sha3 = ["dep:sha3"]
-blake2 = ["dep:blake2"]
-keccak = ["sha3"]
 ripemd-160 = ["ripemd160", "secp256k1"]
-
-# Other.
+keccak = ["keccak-hash"]
 ring = ["dep:ring"]
-der = ["dep:ecdsa", "ecdsa/der"]
-spki = ["dep:spki", "der"]
 
 [dependencies]
-anyhow.workspace = true
-async-trait.workspace = true
-blake2 = { workspace = true, optional = true }
-ssi-bbs.workspace = true
-bbs = { version = "=0.4.1", optional = true }
-bs58 = { workspace = true, features = ["check"] }
-digest.workspace = true
-ecdsa = { version = "0.16.9", optional = true }
-ed25519-dalek = { workspace = true, optional = true, features = ["rand_core"] }
-getrandom = { workspace = true, optional = true } # Required for wasm targets.
-hex.workspace = true
-hkdf = { version = "0.8", optional = true }
-iref.workspace = true
+thiserror.workspace = true
+sha2 = { workspace = true }
+ring = { version = "0.16", optional = true }
 k256 = { workspace = true, optional = true, features = ["ecdsa"] }
 p256 = { workspace = true, optional = true, features = ["ecdsa"] }
 p384 = { workspace = true, optional = true, features = ["ecdsa"] }
-pairing-plus = { version = "=0.19.0", optional = true }
-pin-project.workspace = true
+hkdf = { version = "0.8", optional = true }
 rand.workspace = true
 rand_old = { package = "rand", version = "0.7", optional = true }
-ring = { version = "0.16", optional = true }
-ripemd160 = { version = "0.9", optional = true }
-rsa = { workspace = true, optional = true, features = ["sha2"] }
-serde = { workspace = true, features = ["derive"] }
-sha2 = { workspace = true }
-sha3 = { workspace = true, optional = true }
+getrandom = { workspace = true, optional = true } # Required for wasm targets.
 sha2_old = { package = "sha2", version = "0.8", optional = true }
-signature = { version = "2.2.0", features = ["std"] }
-spki = { version = "0.7.3", features = ["alloc"], optional = true }
-static-iref.workspace = true
-thiserror.workspace = true
+keccak-hash = { version = "0.7", optional = true }
+ed25519-dalek = { workspace = true, optional = true, features = ["rand_core"] }
+ripemd160 = { version = "0.9", optional = true }
+bbs = { version = "=0.4.1", optional = true }
+pairing-plus = { version = "=0.19.0", optional = true }
+serde = { workspace = true, features = ["derive"] }
 zeroize = { version = "1.5", features = ["zeroize_derive"] }
+bs58 = { workspace = true, features = ["check"] }
+digest = "0.9"
+iref.workspace = true
+static-iref.workspace = true
+async-trait.workspace = true
+pin-project.workspace = true
+hex.workspace = true
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { workspace = true, features = ["js"], optional = true }
