Support `application/vc+sd-jwt` for W3C bitstring status lists. (#669)
* Support for vc+sd-jwt bitsting status lists

* VC/VP Media type constants.

* Bump MSRV to 1.82.

--- a/crates/status/Cargo.toml
+++ b/crates/status/Cargo.toml
@@ -12,8 +12,10 @@ documentation = "https://docs.rs/ssi-status/"
 ssi-claims-core.workspace = true
 ssi-jwk.workspace = true
 ssi-jwt.workspace = true
+ssi-sd-jwt.workspace = true
 ssi-jws.workspace = true
 ssi-vc.workspace = true
+ssi-vc-jose-cose.workspace = true
 ssi-verification-methods.workspace = true
 ssi-data-integrity.workspace = true
 ssi-json-ld.workspace = true
