--- a/crates/dids/core/Cargo.toml
+++ b/crates/dids/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ssi-dids-core"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 authors = ["Spruce Systems, Inc."]
 license = "Apache-2.0"
@@ -32,7 +32,10 @@ pin-project.workspace = true
 ssi-jwk.workspace = true
 
 # for the `http` feature.
-reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }
+reqwest = { version = "0.11", default-features = false, features = [
+    "json",
+    "rustls-tls",
+], optional = true }
 percent-encoding = { version = "2.1", optional = true }
 
 [target.'cfg(target_os = "android")'.dependencies.reqwest]
@@ -43,13 +46,11 @@ features = ["json", "native-tls-vendored"]
 async-std = { version = "1.9", features = ["attributes"] }
 tokio = { version = "1.15", features = ["macros"] }
 futures = "0.3"
-hyper = { version = "0.14", features = [
-    "server",
-    "client",
-    "http1",
-    "stream",
+hyper = { version = "0.14", features = ["server", "client", "http1", "stream"] }
+ssi-jwk = { workspace = true, default-features = false, features = [
+    "secp256k1",
+    "ed25519",
 ] }
-ssi-jwk = { workspace = true, default-features = false, features = ["secp256k1", "ed25519"] }
 
 [package.metadata.docs.rs]
 all-features = true
