--- a/crates/dids/methods/ethr/Cargo.toml
+++ b/crates/dids/methods/ethr/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "did-ethr"
-version = "0.3.1"
+version = "0.3.2"
 authors = ["Spruce Systems, Inc."]
 edition = "2021"
 license = "Apache-2.0"
@@ -24,7 +24,12 @@ serde_json.workspace = true
 [dev-dependencies]
 tokio = { version = "1.0", features = ["macros"] }
 ssi-verification-methods-core.workspace = true
-ssi-claims = { workspace = true, features = ["ethereum", "eip712", "dif", "secp256k1"] }
+ssi-claims = { workspace = true, features = [
+    "ethereum",
+    "eip712",
+    "dif",
+    "secp256k1",
+] }
 ssi-json-ld.workspace = true
 xsd-types.workspace = true
 linked-data.workspace = true
