--- a/crates/dids/methods/ion/Cargo.toml
+++ b/crates/dids/methods/ion/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "did-ion"
-version = "0.3.1"
+version = "0.3.2"
 authors = ["Spruce Systems, Inc."]
 edition = "2021"
 license = "Apache-2.0"
@@ -26,7 +26,10 @@ thiserror.workspace = true
 base64.workspace = true
 sha2 = "0.10"
 json-patch = "0.2.6"
-reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.11", default-features = false, features = [
+    "json",
+    "rustls-tls",
+] }
 
 [target.'cfg(target_os = "android")'.dependencies.reqwest]
 version = "0.11"
