--- a/crates/dids/methods/tz/Cargo.toml
+++ b/crates/dids/methods/tz/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "did-tz"
-version = "0.3.1"
+version = "0.3.2"
 authors = ["Spruce Systems, Inc."]
 edition = "2021"
 license = "Apache-2.0"
@@ -17,7 +17,10 @@ ssi-dids-core.workspace = true
 ssi-jwk = { workspace = true, default-features = false, features = ["tezos"] }
 ssi-jws = { workspace = true, default-features = false }
 ssi-core.workspace = true
-reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.11", default-features = false, features = [
+    "json",
+    "rustls-tls",
+] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 async-trait = "0.1"
@@ -41,7 +44,13 @@ features = ["json", "native-tls-vendored"]
 [dev-dependencies]
 ssi-tzkey.workspace = true
 ssi-verification-methods-core.workspace = true
-ssi-claims = { workspace = true, features = ["tezos", "dif", "ed25519", "secp256k1", "secp256r1"] }
+ssi-claims = { workspace = true, features = [
+    "tezos",
+    "dif",
+    "ed25519",
+    "secp256k1",
+    "secp256r1",
+] }
 ssi-json-ld.workspace = true
 json-syntax.workspace = true
 tokio = { version = "1.0", features = ["macros"] }
